--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             overflow: hidden;
             box-shadow: var(--shadow);
             transition: transform 0.3s ease;
+            border: 1px solid blue;
         }
         
         .provider-card:hover {
