--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
                 booked_time: `${selectedTimeSlot.start}-${selectedTimeSlot.end}`,
                 user_email: userEmail,
                 user_name: userDisplayName,
-                provider_id: selectedProvider.id,
+                provider_id: selectedProvider.uid,
                 provider_name: selectedProvider.full_name,
                 confirmed: false,
                 payment_made: false,
