--- a/index.html
+++ b/index.html
@@ -946,7 +946,9 @@
                 provider_name: selectedProvider.full_name,
                 confirmed: false,
                 payment_made: false,
-                session_id: ''
+                session_id: '',
+                userId: userEmail,
+                channelName: '${selectedProvider.uid}_${selectedDate}_${selectedTimeSlot.start}-${selectedTimeSlot.end}'
             };
 
             fetch('https://firebase-backend-6arf.onrender.com/book_session', {
